[project]
name = "pillow-web"
version = "0.1.0"
description = "Add a short description here"
authors = [
    { name = "ymmmtym", email = "26668352+ymmmtym@users.noreply.github.com" }
]
dependencies = [
    "pillow>=9.5.0",
    "flask>=2.3.2",
    "requests>=2.32.4",
]
readme = "README.md"
requires-python = ">= 3.8"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.uv]
managed = true

[tool.hatch.metadata]
allow-direct-references = true
